# nixailab

./: .env  .env.template  .gitignore  README.md  docker-compose.yml  flake.nix  pyproject.toml
old/: .envrc_flake_parts  flake-no-parts.nix
