[tool.poetry]
name = "nixailab"
version = "0.1.0"
description = "nix based AI Lab"
authors = ["John Rizzo <johnrizzo1@gmail.com>"]
license = "GPLv3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
